<resources>
    <string name="app_name">BasketballStars</string>


    //HomeFragment
    <string name="tittle_home">HoopsHeroes!</string>
    <string name="slogan_app">Explore the best teams and players in the NBA</string>
    <string name="get_started">Get started</string>

    //LoginFragment
    <string name="login_subtitle">Join the community of basketball enthusiasts</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="repeat_password">Repeat password: </string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">************</string>
    <string name="description_password">Min 6 characters</string>
    <string name="login">Login</string>
    <string name="new_to_basketball">New to BasketballStars?</string>


    //SignUpFragment
    <string name="username">Username</string>
    <string name="hint_username">Enter username</string>
    <string name="sing">Sign Up</string>
    <string name="sing_witch_google">Sign up witch Google</string>
    <string name="account">Create Account</string>

    //Preferences file
    <string name="prefs_file">com.example.basketballstars.PREFERENCE_FILE_KEY</string>

    //WebClientId
    <string name="default_web_client_id">801185203167-19av39shjtbvna15qf6jhjjglocg7ha9.apps.googleusercontent.com</string>

    //Team
    <string name="tittle_team">Team</string>
    <string name="description_image">image user</string>
    <string name="log_out">Log Out</string>


</resources>