<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/tittle_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmailLogin"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_email"
                android:drawableEnd="@drawable/ic_email"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPasswordLogin"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_password"/>


            <Button
                android:id="@+id/btnLogin"
                style="@style/button_app"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="32dp"
                android:text="@string/login" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/new_to_basketball"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing"
                    android:textColor="@color/accent"
                    android:textStyle="bold"
                    app:fontFamily="@font/poppins_black"
                    android:padding="12dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>