<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SignUpFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/tittle_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmailSignUp"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_email"
                android:drawableEnd="@drawable/ic_email"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPasswordSignUp"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_password"
                app:endIconMode="password_toggle"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_password"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_password"
                android:textSize="12sp"
                android:layout_marginStart="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/repeat_password"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etConfirmPasswordSignUp"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_password"
                app:endIconMode="password_toggle"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_password"/>

            <Button
                android:id="@+id/btnSignUp"
                style="@style/button_app"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="32dp"
                android:text="@string/sing" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/sing_witch_google"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/btnGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>